<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_20dp"
        android:text="@string/signup_lbl"
        android:textSize="18dp">

    </TextView>

    <EditText
        android:id="@+id/edt_usr_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30dp"
        android:layout_marginRight="@dimen/margin_30dp"
        android:hint="@string/user_name" />

    <EditText
        android:id="@+id/edt_usr_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30dp"
        android:layout_marginRight="@dimen/margin_30dp"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edt_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30dp"
        android:layout_marginRight="@dimen/margin_30dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edt_user_conf_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30dp"
        android:layout_marginRight="@dimen/margin_30dp"
        android:hint="@string/conf_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edt_user_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginLeft="@dimen/margin_30dp"
        android:layout_marginRight="@dimen/margin_30dp"
        android:hint="@string/user_mobile" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30dp"
        android:layout_marginRight="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:text="@string/submit" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone" />

</LinearLayout>