<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_20dp"
        android:text="@string/main_lbl"
        android:textSize="18dp">

    </TextView>

    <TextView
        android:id="@+id/txt_usr_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_name" />

    <TextView
        android:id="@+id/txt_usr_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress" />



    <TextView
        android:id="@+id/txt_user_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_mobile"
        android:inputType="number" />


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone" />

</LinearLayout>